# nickthiru-dev

./: .env.example  README.md  package-lock.json  package.json  svelte.config.js  tailwind.config.js  tsconfig.json  vite.config.ts
.asi/creator/: decisions.log.jsonl  state.json
.asi/onboard/: NOTES.md  SOURCES.md  STATE.json
.cline/skills/: ASI-README.md
.github/workflows/: content-automation.yml
.roo/: README.md  global_rules.md
.windsurf/: README.md  global_rules.md  windsurf-advanced-features.md  windsurf-feature-migration-plan.md
.windsurf/rules/: audience-guidelines.md  business-writing.md  (+3 more)
.windsurf/skills/asi-cli/: pyproject.toml
.windsurf/skills/asi-cli/src/asi/commands/: doctor.py  skill.py
.windsurf/skills/asi-cli/src/asi/creator/: loop.py  migrate.py  questions.py
.windsurf/skills/asi-cli/src/asi/onboard/: runner.py  schemas.py
.windsurf/skills/asi-cli/src/asi/util/: validate.py
docs/: blog-post-frontmatter-validation-schema.md  components-usage.md  content-creation-manual.md  content-creation-playbook.md  implementation-summary.md  methodology-series-plan.md  newsletter-digest-guide.md  newsletter-resubscribe-error-handling.md  newsletter-subscription.md  notes.md  route-structure.md  testing-strategy.md  track-naming-convention.md  voice-style-system.md  website-language-audit.md  website-spec.md  windsurf-advanced-features.md  writing-guide.md
scripts/: content-transform.js  daily-content.sh  privacy-check.js  update-series-tracker.ts  validate-frontmatter.ts  verify-product-names.ts
src/: app.css  app.html
static/: robots.txt
(+261 files in other folders)
