[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "asi-cli"
version = "0.1.0"
description = "ASI agent-owned CLI (deterministic skills boundary)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
]

[project.scripts]
asi = "asi.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
